--- a/projects/raccounting/test/fixtures/customers.yml
+++ b/projects/raccounting/test/fixtures/customers.yml
@@ -1,7 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  company_title: MyString
   short_name: MyString
 
 two:
+  company_title: MyString
   short_name: MyString
